fix: mobile horizontal scroll

--- a/src/style/base.css
+++ b/src/style/base.css
@@ -26,6 +26,7 @@ html {
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
   text-size-adjust: 100%;
+  overflow-x: hidden;
 }
 
 body {
